--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     --color-on-background: black;
     --color-background-hover: #eee;
     --color-on-background-hover: black;
-    --color-primary: #00d0ff;
+    --color-primary: #288893;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
