--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 :root {
-    --color-background: white;
-    --color-on-background: black;
+    --color-background: #52aeff;
+    --color-on-background: #00396b;
     --color-background-hover: #eee;
     --color-on-background-hover: black;
-    --color-primary: #288893;
+    --color-primary: #00396b;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
@@ -12,11 +12,11 @@
 main.dark,
 header.dark {
     color-scheme: dark;
-    --color-background: #1c1b1f;
-    --color-on-background: white;
+    --color-background: #00396b;
+    --color-on-background: #52aeff;
     --color-background-hover: #27262c;
     --color-on-background-hover: white;
-    --color-primary: #288893;
+    --color-primary: #2274bd;
     --color-primary-disabled: #1f213c;
     --color-on-primary: white;
     --color-error: #de0000;
