--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 :root {
-    --color-background: #52aeff;
-    --color-on-background: #00396b;
+    --color-background: white;
+    --color-on-background: black;
     --color-background-hover: #eee;
     --color-on-background-hover: black;
-    --color-primary: #00396b;
+    --color-primary: #000000;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
@@ -12,12 +12,12 @@
 main.dark,
 header.dark {
     color-scheme: dark;
-    --color-background: #00396b;
-    --color-on-background: #52aeff;
+    --color-background: #1c1b1f;
+    --color-on-background: white;
     --color-background-hover: #27262c;
     --color-on-background-hover: white;
-    --color-primary: #2274bd;
-    --color-primary-disabled: #1f213c;
+    --color-primary: #000000;
+    --color-primary-disabled: #000000;
     --color-on-primary: white;
     --color-error: #de0000;
     --color-on-error: white;
