--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ header.dark {
     --color-on-background: white;
     --color-background-hover: #27262c;
     --color-on-background-hover: white;
-    --color-primary: #000000;
+    --color-primary: #b30000;
     --color-primary-disabled: #000000;
     --color-on-primary: white;
     --color-error: #de0000;
